# aoc-2024

./: .gitignore  Cargo.toml  README.md  day-01.bench.txt  day-02.bench.txt  day-03.bench.txt  day-04.bench.txt  day-05.bench.txt  day-06.bench.txt  day-07.bench.txt  day-08.bench.txt  day-09.bench.txt  day-10.bench.txt  day-11.bench.txt  day-13.bench.txt  day-14.bench.txt  justfile
aoclib/: Cargo.toml
aoclib/src/: grid.rs  lib.rs  parsers.rs
daily-template/: Cargo.toml
daily-template/benches/: benchmarks.rs
daily-template/src/: part2.rs
day-01/: Cargo.toml
day-01/benches/: benchmarks.rs
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/benches/: benchmarks.rs
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml
day-03/benches/: benchmarks.rs
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/benches/: benchmarks.rs
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml
day-05/benches/: benchmarks.rs
day-05/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-06/benches/: benchmarks.rs
day-06/src/: part1.rs  part2.rs
day-07/: Cargo.toml
day-07/benches/: benchmarks.rs
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/benches/: benchmarks.rs
day-08/src/: part1.rs  part2.rs
day-09/: Cargo.toml
day-09/benches/: benchmarks.rs
day-09/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/benches/: benchmarks.rs
day-10/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/benches/: benchmarks.rs
day-11/src/: part1.rs  part2.rs
day-12/: Cargo.toml
day-12/benches/: benchmarks.rs
day-12/src/: part1.rs  part2.rs
day-13/: Cargo.toml
day-13/benches/: benchmarks.rs
day-13/src/: part1.rs  part2.rs
day-14/: Cargo.toml
day-14/benches/: benchmarks.rs
day-14/src/: part1.rs  part2.rs
day-15/: Cargo.toml
day-15/benches/: benchmarks.rs
day-15/src/: part1.rs  part2.rs
day-16/: Cargo.toml
day-16/benches/: benchmarks.rs
day-16/src/: part1.rs  part2.rs
extra_credit/c/day1/: day1_part1
extra_credit/crystal/: day2  day2.cr  day2.dwarf
extra_credit/mojo/mojo-aoc/: day11  day11.mojo  day13.mojo  day2  day2.mojo  day24.mojo  mojoproject.toml  test_slice.mojo  tiny.txt
extra_credit/perl/: day3.pl
extra_credit/python/: day1.py  day1_ja.py  day2.py
extra_credit/raku/: day1.raku
extra_credit/ruby/: day1.rb
extra_credit/typescript/: day1.ts
