[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]

[workspace.dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
itertools = "0.13.0"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
rstest = "0.23.0"
rstest_reuse = "0.7.0"
divan = "0.1.7"
test-log = { version = "0.2.13", default-features = false, features = [
    "trace",
] }
tempdir = "0.3.7"
